# codyco-y4-viz

./: README.md
testbot_description/: CMakeLists.txt  README.md  package.xml  urdf.rviz  urdf.vcg
testbot_description/launch/: displayHalfPhantom.launch  displayHuman.launch  displayPhantom.launch  displayR2D2.launch  displayRobot.launch  displayRobotStatic.launch  gazebo.launch  xacrodisplay.launch
testbot_description/src/: joint_state_publisher.cpp  tf_broadcaster.cpp  tf_phantomTransform_broadcaster.cpp  tf_simpleTransform_broadcaster.cpp  wrench_stamped_publisher.cpp
testbot_description/urdf/: HalfPhantomURDF.xml  HumanURDF.urdf  PhantomURDF.xml  XSensURDF.urdf  XSensURDF.xml  model.xml
